--- a/css.css
+++ b/css.css
@@ -78,6 +78,7 @@ h2, h3 {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	max-width: 100%;
 }
 
 button, .button {
@@ -126,7 +127,7 @@ button:hover, .button:hover, button:focus, .button:focus {
 #main-image {
 	flex-grow: 1;
 	height: 80vh;
-	margin: 40px;
+	margin: 20px;
 	text-align: center;
 	display: flex;
 	align-items: center;
@@ -145,6 +146,7 @@ button:hover, .button:hover, button:focus, .button:focus {
 	border-radius: 4px;
 	border: 1px outset #617777;
 	border-bottom: 2px outset #617777;
+	width: 100vw;
 }
 
 h1 {
@@ -274,11 +276,28 @@ h1 {
 	border-color: var(--mid) transparent transparent transparent;
 }
 
+.loose-slot {
+	display: inline-flex;
+	margin: 5px;
+	align-items: center;
+	border: 1.5px solid var(--dark);
+	border-radius: 4px;
+	padding: 4px 8px;
+}
+
+#tab-three .loose-slot img {
+	width: 130px;
+}
+
 /** Tab Stuff **/
 
 @keyframes fadeIn {
     from { opacity: 0; }
     to { opacity: 1; }
+}
+
+#tab-container {
+	width: 100%;
 }
 
 .tab {
@@ -288,6 +307,75 @@ h1 {
 
 .tab.open {
 	display: flex;
+}
+
+#tab-three.open {
+	display: block;
+	width: 100%;
+}
+
+#tab-three ul li, #tab-three ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+#tab-three > ul > li {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+#planned-breedings > li {
+	padding: 10px 0 !important;
+	border-bottom: 1px solid var(--dark);
+}
+
+#tab-three img {
+	width: 200px;
+}
+
+.form-button {
+	position: relative;
+}
+
+.form-content {
+	display: none;
+}
+
+.copied-tooltip {
+	display: none;
+	opacity: 0;
+	transition: 200ms ease;
+}
+
+.copied-tooltip {
+	width: fit-content;
+  	min-width: 60px;
+  	background-color: var(--mid);
+  	color: var(--white);
+  	text-align: center;
+  	padding: 5px 10px;
+  	border-radius: 6px;
+  	position: absolute;
+  	z-index: 1;
+  	bottom: 130%;
+  	left: 50%;
+  	transform: translateX(-50%);
+  	opacity: 0;
+  	transition: 200ms ease;
+  	pointer-events: none;
+}
+
+.copied-tooltip:after {
+	content: " ";
+	position: absolute;
+	top: 100%; /* At the bottom of the tooltip */
+	left: 50%;
+	margin-left: -5px;
+	border-width: 5px;
+	border-style: solid;
+	border-color: var(--mid) transparent transparent transparent;
 }
 
 /** Media Queries **/
